stylesheets/main.css
body {
  font-family: 'Open Sans', sans-serif;
  margin: 0;
  padding-top: 60px;
  color: gray;
}

* {
  box-sizing: border-box;
}

:root {
  --main-width: 1142px;
  --main-content-left-width: 57%;
  --width-of-our-goals: 43%;
}

h1,
h2 {
  font-size: 2em;
}

h1,
h2,
h3,
h4 {
  text-transform: uppercase;
  font-weight: 400;
}

button {
  text-transform: uppercase;
}

nav {
  width: 100%;
  height: 80px;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 99;
  background: #1D2126;
  display: flex;
  justify-content: center;
}

.nav-box {
  width: var(--main-width);
  height: inherit;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav ul {
  width: 615px;
  margin: 0 19px;
  padding: 0;
  height: inherit;
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: none;
}

nav ul li a {
  text-transform: uppercase;
  font-size: .9em;
  display: block;
  padding: 4px 9px;
  text-decoration: none;
  color: #9FA9A8;
  border: 2px solid transparent;
}

nav ul li a:hover {
  border-color: #9FA9A8;
  border-radius: 6px;
}

nav ul li a.active {
  color: #23B7A4;
  border: 2px solid #23B7A4;
  border-radius: 6px;
}

.logo {
  color: white;
  margin: 0;
}

nav button {
  width: 40px;
  height: 40px;
  border: 0;
  background: transparent;
  display: none;
  outline: none;
}

nav button .line {
  width: 100%;
  height: 3px;
  background: white;
  display: block;
  margin: 5px 0;
}

nav .drawer {
  display: none;
  transform: translateX(-100%);
  transition: transform 0.6s;
}

nav .drawer ul li {
  margin: 0 10px;
}

nav .back-drop {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: #00000066;
  z-index: 10;
}

@media (max-width: 800px) {
  nav ul {
    display: none;
  }

  nav button {
    display: block;
  }

  nav .drawer {
    display: block;
    width: 160px;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    background: #16263f;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 11;
  }

  nav .drawer ul {
    margin: 0;
    padding: 0;
    width: 140px;
    display: flex;
    flex-flow: column;
    justify-content: center;
  }

  nav .drawer ul li {
    margin: 10px 0;
  }
}

header {
  width: 100%;
  height: 679px;
  position: relative;
  background: linear-gradient(135deg, rgb(6, 2, 53), rgb(108, 107, 172))
}

header .carousel {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  position: relative;
  list-style: none;
}

header .carousel li {
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
  transition: opacity .4s;
}

header .carousel li.active {
  opacity: .6;
}

header .header-content {
  max-width: var(--main-width);
  height: 100%;
  position: absolute;
  left: calc(50% - (var(--main-width) / 2));
  top: 0;
  z-index: 90;
}

header .header-content .box {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

header .header-content section {
  width: var(--main-content-left-width);
  height: 145px;
  color: white;
}

header .header-content section div {
  margin: 25px 0 0;
}

header .controls {
  position: absolute;
  right: 105px;
  bottom: 30px;
  display: flex;
  z-index: 9999;
}

.controls button {
  width: 14px;
  height: 12px;
  border: 2px solid white;
  background: transparent;
  border-radius: 100%;
  outline: none;
  margin: 0 2px;
  transition: background .4s;
}

.controls button.active {
  background: white;
}

header div[class^="bg-"] {
  background-size: cover;
  background-position: center;
  width: 100%;
  height: 100%;
}

.bg-1 {
  background: url(../images/bg-3.jpg);
}

.bg-2 {
  background: url(../images/bg-2.jpg);
}

.bg-3 {
  background: url(../images/bg-1.jpg);
}

header h1 {
  margin: -31px 0 0;
}

header p {
  line-height: 27px;
}

header section>div {
  display: flex;
}

.btn {
  min-width: 125px;
  height: 45px;
  background: transparent;
  color: white;
  border: 2px solid white;
  border-radius: 4px;
  margin: 10px 10px 10px 0;
  outline: none;
}

.btn:hover {
  background: #23B7A4;
  border-color: #23B7A4;
}

.container {
  display: flex;
  flex-flow: column;
  align-items: center;
}

.container .content {
  margin-top: 9px;
  width: var(--main-width);
  padding: 40px 0;
}

.container h2 {
  line-height: 34px;
  height: 33px;
  color: #292F36;
  border-left: 10px solid silver;
  padding-left: 15px;
  margin-top: 32px;
}

.links-to-social {
  margin: 49px 0 0;
}

.links-to-social a {
  text-decoration: none;
  display: inline-block;
  color: white;
  background: silver;
  width: 60px;
  height: 60px;
  line-height: 60px;
  text-align: center;
  margin: 0 -3px 0 0;
  font-size: 1.2em;
}

.links-to-social a:hover {
  opacity: .6;
}

.goal {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  justify-content: space-around;
}

.goal article {
  width: calc(100% - 80px)
}

.goal article h4 {
  margin: 0;
  line-height: 13px;
}

.about .goal article>p {
  margin-top: 13px;
  line-height: 27px;
}

.number {
  width: 50px;
  height: 50px;
  background: #23B7A4;
  color: white;
  text-align: center;
  line-height: 50px;
}

.about {
  display: flex;
}

.about section {
  width: var(--main-content-left-width);
}

.about section p {
  margin: 31px 0;
  line-height: 25px;
}

.about .our-goals {
  width: var(--width-of-our-goals);
  box-sizing: border-box;
  padding: 37px 0 0 26px;
}

.our-team {
  width: 100%;
  margin: 60px 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  grid-gap: 10px;
}

.image {
  width: 100%;
  height: 300px;
  overflow: hidden;
  position: relative;
}

.image img {
  transition: transform .6s;
}

.member {
  width: 100%;
  display: flex;
  justify-content: center;
}

.member-box {
  width: 240px;
}

.member:hover img {
  transform: scale(1.1);
}

.member-contacts {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  background: rgba(255, 255, 255, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  transition: opacity .6s;
}

.member-contacts .links-to-social {
  margin: 0;
  display: flex;
}

.member-contacts .links-to-social a {
  background: #3A454D;
  width: 50px;
  background: #3A454D;
  height: 50px;
  line-height: 50px;
  margin: 0 1px 0 0;
  display: block;
}

.member:hover .member-contacts {
  opacity: 1;
}

.info {
  background: #E1E6EA;
  box-sizing: border-box;
  padding: 15px;
}

.info h4,
.info p {
  margin: 0;
}

.member:hover .info {
  background: #3A454D;
  color: white;
}

@media (max-width: 1150px) {
  .our-team {
    flex-flow: wrap;
    justify-content: space-between;
  }
}

#portfolio,
#features {
  background: #3A454D;
}

#features {
  color: #FDFDFD;
}

#features .content {
  padding: 46px 0 0;
}

.features {
  margin: 61px 0 44px;
}

.feature img {
  height: 240px;
  margin-bottom: 20px;
}

.feature p {
  line-height: 27px;
}

#portfolio h2,
#features h2 {
  color: white;
}

.works {
  width: 100%;
  margin: 60px 0 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  grid-gap: 2rem;
}

.work {
  position: relative;
  width: 100%;
  height: 266px;
}

img {
  width: 100%;
  height: 100%;
}

.work-hover {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  align-items: center;
  background: rgba(0, 0, 0, 0.5);
  transition: opacity .6s;
  text-decoration: none;
  color: white;
}

.work-hover i {
  margin: 92px 0 0;
  font-size: 1.5em;
}

.work:hover .work-hover {
  opacity: 1;
  color: white;
}

.work-name {
  width: 100%;
  height: 60px;
  box-sizing: border-box;
  padding: 0 10px;
  background: #292F36;
  line-height: 40px;
  color: white;
}

.work-name h4 {
  font-weight: normal;
  height: 60px;
  line-height: 60px;
  margin: 0;
  width: 100%;
  padding-left: 10px;
  box-sizing: border-box;
}

.services,
.features {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(205px, 1fr));
  grid-gap: 2rem;
}

.services {
  margin: 46px 0;
}

.services i {
  margin: 10px 0;
  font-size: 3.2em;
  color: #0EA9A1;
}

.item {
  margin: 25px 0;
  text-align: center;
}

.item h3 {
  text-transform: uppercase;
}

.show {
  width: 100%;
  display: flex;
  justify-content: center;
}

.show .btn {
  margin: 55px auto 20px;
  padding: 0 19px;
}

h2.header_contact_title {
  margin: 16px 0 21px;
}

#contact .content:last-child {
  padding: 0;
}

.contacts {
  display: flex;
  flex-flow: wrap;
}

.contact-info {
  width: 50%;
  min-width: 300px;
}

.contact-info h3 {
  margin-left: 10px;
  color: black;
}

.contact-form {
  min-width: 300px;
  width: 50%;
  margin-top: -170px;
  z-index: 2;
  background: #fff;
  padding: 30px;
  box-sizing: border-box;
}

form {
  width: 100%;
  display: flex;
  flex-flow: wrap;
  justify-content: space-between;
}

form label {
  width: calc(50% - 20px);
  display: flex;
  flex-flow: column;
  margin: 0 0 20px;
}

form label input {
  width: 100%;
  border: none;
  padding: 14px 5px;
  border-radius: 6px;
  background: #EAEEF1;
  box-sizing: border-box;
}

.message {
  width: 100%;
}

.message textarea {
  width: 100%;
  border: none;
  padding: 10px 5px;
  border-radius: 6px;
  background: #EAEEF1;
  resize: vertical;
  max-height: 400px;
  min-height: 100px;
  box-sizing: border-box;
}

.submit {
  min-width: 150px;
  height: 42px;
  color: white;
  border: 2px solid #23B7A4;
  border-radius: 4px;
  margin: 20px 0;
  outline: none;
  background: #23B7A4;
}

@media (max-width: 1200px) {
  :root {
    --main-width: 80%;
    --main-content-left-width: 50%;
    --width-of-our-goals: 50%;
  }
}

@media (max-width: 1000px) {
  :root {
    --main-content-left-width: 50%;
  }
}

@media (max-width: 900px) {
  :root {
    --main-content-left-width: 100%;
    --width-of-our-goals: 100%;
  }

  .about {
    display: block;
  }

  .about section {
    width: 100%;
  }

  form label {
    align-items: center;
  }

  .contact-info {
    width: 100%;
  }

  .contact-form {
    width: 100%;
    margin: 0;
    padding: 0;
    box-shadow: none;
  }

  .message {
    display: flex;
    flex-flow: column;
    align-items: center;
  }

  .container div.content {
    width: 95%;
  }

  .contact-form form button {
    margin: 20px auto;
  }
}

@media (max-width: 400px) {
  .number {
    display: none;
  }

  #about .our-goals {
    padding: 40px 10px;
  }

  .goal article {
    width: 100%;
  }
}

@media (max-width: 600px) {
  body footer {
    justify-content: center;
    align-items: center;
    flex-flow: column;
    text-align: center;
    height: 200px;
  }

  footer div {
    margin: 20px 0;
  }

  form label {
    width: 100%;
    align-items: flex-start;
  }

  .message {
    align-items: flex-start;
  }
}

footer {
  width: 100%;
  height: 95px;
  background: #3A454D;
  color: white;
  display: flex;
  padding: 20px 100px;
  align-items: center;
  margin: 54px 0 0;
  box-sizing: border-box;
  justify-content: space-between;
}

footer a {
  text-decoration: none;
  color: white;
}

footer i {
  margin: 0 5px;
}

hr {
  margin: 58px 0 0 0;
  background: rgb(212, 212, 212);
  width: 100%;
}

.footer-links {
  width: 165px;
  display: flex;
  justify-content: space-between;
}

